Complete and fix some bug

--- a/eProject/Areas/Admin/Views/Account/Detail.cshtml
+++ b/eProject/Areas/Admin/Views/Account/Detail.cshtml
@@ -138,7 +138,7 @@
                     <i class="fa-solid fa-money-bills"></i>
                     Generate bill
                 </a>
-                <a class="order-actionItem" href="/Admin/Bill/Filter" style="background: #00ab80; color: #fff;">
+                <a class="order-actionItem" href="/Admin/Bill/Index?accountID=@Model.AccountID" style="background: #00ab80; color: #fff;">
                     <i class="fa-solid fa-money-bills"></i>
                     View bills
                 </a>
