--- a/eProject/Areas/Admin/Views/Equipment/Index.cshtml
+++ b/eProject/Areas/Admin/Views/Equipment/Index.cshtml
@@ -7,7 +7,7 @@
 @section scripts {
     <script>
         $(function () {
-            $("#deleteEquipmentBtn").click(function (e) {
+            $(".deleteEquipmentBtn").click(function (e) {
                 if (!confirm("Are you sure you want to delete this equipment")) {
                     e.preventDefault();
                 }
@@ -63,7 +63,7 @@
                             <a class="equipmentRow-action" href="/Admin/Equipment/Edit?id=@equipment.EquipmentID">
                                 Edit
                             </a>
-                            <a class="equipmentRow-action dlt" id="deleteEquipmentBtn" href="/Admin/Equipment/Delete?id=@equipment.EquipmentID">
+                            <a class="equipmentRow-action dlt deleteEquipmentBtn" href="/Admin/Equipment/Delete?id=@equipment.EquipmentID">
                                 Delete
                             </a>
                         </div>
