--- a/eProject/Areas/Admin/Views/RetailShowRoom/Index.cshtml
+++ b/eProject/Areas/Admin/Views/RetailShowRoom/Index.cshtml
@@ -65,7 +65,7 @@
                                     Delete
                                 </a>
                                 <a style="background: #339FFF; color: #fff" class="retailStoreItem-action" href="/Admin/RetailShowRoom/Detail?retailShowRoomID=@retailShowRoom.RetailShowRoomID">
-                                    Detail
+                                    View List Employee
                                 </a>
                             </div>
                            
