--- a/eProject/Content/Css/AdminCss/RetailShowRoom/Index.css
+++ b/eProject/Content/Css/AdminCss/RetailShowRoom/Index.css
@@ -1,4 +1,8 @@
-﻿.introduce {
+﻿.content-main {
+    padding: 12px;
+}
+
+.introduce {
     height: 400px;
     background-image: linear-gradient(#5d8aa8, var(--dark-bg-content));
     display: flex;
@@ -172,11 +176,10 @@ h2 {
     color: #333;
     background-color: #e9d66b;
     margin-top: 8px;
-    width: 25%;
     text-align: center;
 }
 
-.retailStoreItem-action {
+.retailStoreItem-action:not(:first-child) {
     margin-left: 10px;
 }
 
