--- a/eProject/Views/Site/HowToOrderAService.cshtml
+++ b/eProject/Views/Site/HowToOrderAService.cshtml
@@ -13,7 +13,7 @@
 
         <div class="row">
             <div class="col-xl-4">
-                <img src="~/Content/Images/demo2.png" alt="Img section" style="width: 100%" />
+                <img src="~/Content/Images/subimage.png" alt="Img section" style="width: 100%" />
             </div>
             <div class="col-xl-8">
                 <h3 style="padding-bottom: 12px;">Step 1: Contact customer support:</h3>
