--- a/eProject/Views/Site/Index.cshtml
+++ b/eProject/Views/Site/Index.cshtml
@@ -22,7 +22,7 @@
 
         <div class="row mt-5">
             <div class="col-xl-4">
-                <img src="~/Content/Images/internet_nexus.jpg" alt="Img section" style="width: 100%" />
+                <img src="~/Content/Images/subimage.png" alt="Img section" style="width: 100%" />
             </div>
             <div class="col-xl-8">
                 <span style="font-size: 1.6rem; font-weight: 400">
