--- a/eProject/Areas/Admin/Views/Account/Index.cshtml
+++ b/eProject/Areas/Admin/Views/Account/Index.cshtml
@@ -64,6 +64,10 @@
                             @account.AccountID
                         </h3>
                         <p class="orderItem-line">
+                            Order ID:
+                            @account.OrderID
+                        </p>
+                        <p class="orderItem-line">
                             Service Name:
                             @account.ServiceName
                         </p>
