--- a/eProject/Areas/Admin/Views/Customer/Edit.cshtml
+++ b/eProject/Areas/Admin/Views/Customer/Edit.cshtml
@@ -11,7 +11,7 @@
 </h1>
 
 <nav class="topNav">
-    <a class="topNav-btnItem" href="/Admin/Employee/ChangePassword?employeeID=@Model.CustomerID">
+    <a class="topNav-btnItem" href="/Admin/Customer/ChangePassword?customerID=@Model.CustomerID">
         Change Password
     </a>
 </nav>
