--- a/eProject/Areas/Admin/Views/CustomerFeedback/Reply.cshtml
+++ b/eProject/Areas/Admin/Views/CustomerFeedback/Reply.cshtml
@@ -1,4 +1,5 @@
 ﻿@model eProject.Models.CustomerFeedback
+@section styles {
     <link rel="stylesheet" href="~/Content/Css/AdminCss/Feedback/Add.css" />
 }
 @{
