--- a/eProject/Areas/Admin/Views/RetailShowRoom/Index.cshtml
+++ b/eProject/Areas/Admin/Views/RetailShowRoom/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 <h1 class="page-title">
-    Reatial show room management
+    Reatail Show Room Management
 </h1>
 <nav class="topNav">
     <a class="topNav-btn" href="~/Admin/RetailShowRoom/AddRetailStore">
