--- a/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
@@ -46,7 +46,7 @@
             </a>
             <a class="sidebar-menuItem" href="/Admin/City">
                 <i class="fa-solid fa-lines-leaning"></i>
-                Citys
+                Cities
             </a>
             <a class="sidebar-menuItem" href="/Admin/ConnectQuantityDiscount">
                 <i class="fa-solid fa-lines-leaning"></i>
