--- a/eProject/Views/Customer/_ProfileSidebar.cshtml
+++ b/eProject/Views/Customer/_ProfileSidebar.cshtml
@@ -11,7 +11,7 @@
             My orders
         </a>
         <a class="leftSidebar-navItem" href="/Customer/MyConnections">
-            My connections
+            My accounts
         </a>
     </nav>
 </div>
