--- a/eProject/Views/Order/Detail.cshtml
+++ b/eProject/Views/Order/Detail.cshtml
@@ -23,8 +23,13 @@
         <i class="fa-solid fa-parachute-box"></i>
         Order View Detail
     </h1>
+    <div class="">
+        <a style="font-size: 1.4rem; color: #999;" href="/Customer/MyOrders">
+            Back to my orders
+        </a>
+    </div>
 
-    <div class="row">
+    <div class="row mt-5">
         <div class="col-xl-6">
             <div class="boxSection">
                 <div class="serviceSide">
