--- a/eProject/Areas/Admin/Views/Account/Detail.cshtml
+++ b/eProject/Areas/Admin/Views/Account/Detail.cshtml
@@ -143,7 +143,7 @@
                     View bills
                 </a>
                 <a class="order-actionItem" href="/Admin/Account/" style="background: #ffbf00; color: #333;">
-                    Back
+                    Back to accounts list
                 </a>
             </div>
         </div>
