--- a/eProject/Content/Css/AdminCss/Feedback/Index.css
+++ b/eProject/Content/Css/AdminCss/Feedback/Index.css
@@ -138,9 +138,10 @@ summary {
 }
 
 .feedback-account{
-    font-size: 1rem;
-    margin-bottom: 1px;
-    margin-left: 1.5rem;
+    font-size: 1.4rem;
+    margin-bottom: 6px;
+    margin-left: 8px;
+    color: #999;
 }
 
 .feedback-customer {
